test/files/neg/t10752.check
Test_2.scala:2: warning: class DeprecatedClass in package p1 is deprecated
object Test extends p1.DeprecatedClass {
                       ^
Test_2.scala:3: warning: class DeprecatedClass in package p1 is deprecated
  def useC = p1.DeprecatedClass.foo
                ^
Test_2.scala:4: warning: method foo in class DeprecatedMethod is deprecated
  def useM = p1.DeprecatedMethod.foo
                                 ^
error: No warnings can be incurred under -Werror.
3 warnings
1 error
